# pyqt6-tools-wraper

./: .gitignore  README.md  actions.py  config.py  config_example.json  helpers.py  install.py  main.py  pyproject.toml  run  run.bat  whatcher.py
files/: helpers.py  main.py
files/dialog_window/: __init__.py  gui.ui  gui_ui.py
files/main_window/: __init__.py  gui.ui  gui_ui.py
files/widget/: __init__.py  gui.ui  gui_ui.py
